web: feat(core): add "common settings" widget on dashboard
